--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sails-goose",
-  "version": "1.0.0",
-  "description": "Mongoose Integration for sails Js",
+  "version": "1.0.2",
+  "description": "Mongoose Integration for sailsjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
